--- a/style.css
+++ b/style.css
@@ -47,9 +47,9 @@ header{
     border-bottom: 2px solid white; /* Este es un subrayado blanco que aparecerá cuando estamos por encima con el mouse */
 }
 
-/*#menu-icon{
-    display: none;  Lo pongo en none para que solo se vea cuando la página esté colapsada de forma horizontal 
-} */
+#menu-icon{
+     display: none; /* Lo pongo en none para que solo se vea cuando la página esté colapsada de forma horizontal  */
+}
 
 #menu-icon{
     font-size: 35px;
@@ -77,7 +77,7 @@ header{
     gap: 2rem; /* Haya espacio de 2rem entre las dos columnas */
 }
 
-.section{
+section{
     padding: 0 8%;
 }
 
