--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ header{
     height: 100%;
     width: 100%;
     min-height: 100vh;
-    background: linear-gradient(245.59deg, #31494e 0%, #385e70 25%, #131313 75%); /* Fondo de color gradiente */
+    background: linear-gradient(245.59deg, #56bda1 0%, #6893f7 25% , #0a0a0a 75%); /* Fondo de color gradiente */
     position: relative; /* Para que sea relativo al contenedor (nos permite usar top, bottom, left y right) */
     display: grid; /* Para que el hero se pueda dividir en dos columnas */
     grid-template-columns: 1fr 1fr; /* Las 2 columnas */
@@ -120,7 +120,7 @@ section{
 
 .hero-text a{
    display: inline-block;
-   background-color: #4d4d4d;
+   background-color: #3da893;
    border: 1px solid transparent;
    padding: 15px 30px;
    line-height: 1.4;
